	imbalance.  If PTRACE_GETMAPFD doesn't work, say why.
	* libproc/Pcontrol.h (exec_handler_fun): Make it clearer that this
	is a function pointer.
	(ps_prochandle_t.exec_handler): Likewise.
	(set_exec_handler): Likewise.
	* libproc/Pcontrol.c (set_exec_handler): Likewise.
	(Pgrab): Prohibit self-grabs.
	(bkpt_flush): Suppress breakpoint traps during breakpoint flushing.
	* libproc/rtld_db.c (rd_event_enable): Turn on the rd_monitoring
	flag when rtld activity monitoring is turned on.
	(rd_ldso_nonzero_lmid_consistent_begin): Consistently use 0/1
	for the last argument of Ptrace(), not TRUE/FALSE.
	* libdtrace/dt_pid.c (dt_pid_create_usdt_probes): Don't
	Pupdate_maps().

2013-06-04  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/Build (DRTI_OBJ): Always build -fPIC.

2013-06-03  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_program.c (dtrace_program_header): Emit missing
	#include.

2013-05-22  Nick Alcock  <nick.alcock@oracle.com>

	Breakpoint notifiers.

	* libproc/libproc.h (Pbkpt_notifier): New prototype.
	* libproc/Pcontrol.h (bkpt_handler_t.notifier_list): New, this is
	sometimes now kept in a list.
	(bkpt_t.bkpt_notifiers): The list (of notifiers).
	* libproc/Pcontrol.c (Pbkpt): Rename to...
	(add_bkpt): ... this, and add is_notifier argument and optional
	addition to the notifier list.
	(Pbkpt): Re-express as wrapper around add_bkpt.
	(Pbkpt_notifier): New function, wrapper around add_bkpt.
	(Punbkpt): Refactor out cleanup calls and bkpt freeing into...
	(delete_bkpt_handler): ... this new function.  Add notifier
	cleanup calls and freeing.
	(bkpt_flush): Use it rather than open-coding the cleanup.
	(bkpt_handle_start): Call the notifiers, if any.  Don't call the
	handler if there is none.
	(bkpt_handle_post_singlestep): Likewise, for post-singlestep
	breakpoints.

	* libproc/rtld_db.c (rd_start_trap): Now a notifier, returning void.
	(rd_exec_handler): Add it with Pbkpt_notifier(), not Pbkpt().
	(rd_new): Likewise.
